--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "main": "program.js",
     "dependencies": {
         "dequeue": "^1.0.5",
-        "ffi": "^2.3.0"
+        "ffi-napi": "^4.0.3",
+        "ref-napi": "^3.0.3"
     },
-    "devDependencies": {},
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node program.js"
     },
     "author": "Steven Smethurst",
     "license": "ISC"
